fix some bugs in  order cancel

--- a/views/user/blog.hbs
+++ b/views/user/blog.hbs
@@ -37,7 +37,7 @@
                 <!--Main Content-->
                 <div class="col-12 col-sm-12 col-md-12 col-lg-12 main-col">
                 	<div class="custom-search">
-                        <form action="http://annimexweb.com/search" method="get" class="input-group search-header search" role="search" style="position: relative;">
+                        <form action="#" method="get" class="input-group search-header search" role="search" style="position: relative;">
                             <input class="search-header__input search__input input-group__field" type="search" name="q" placeholder="Search" aria-label="Search" autocomplete="off">
                             <span class="input-group__btn"><button class="btnSearch" type="submit"> <i class="icon anm anm-search-l"></i> </button></span>
                         </form>
