--- a/views/user/partials/header.hbs
+++ b/views/user/partials/header.hbs
@@ -217,7 +217,7 @@
             
           </ul>
         </li>
-        	<li class="lvl1 parent megamenu"><a href="/product">Product <i class="anm anm-plus-l"></i></a>
+        	{{!-- <li class="lvl1 parent megamenu"><a href="/product">Product <i class="anm anm-plus-l"></i></a> --}}
           <ul>
            
           </ul>
@@ -228,7 +228,7 @@
                 
             </li>
            
-			<li><a href="/checkout" class="site-nav">Checkout</a></li>
+			{{!-- <li><a href="/checkout" class="site-nav">Checkout</a></li> --}}
            <li><a href="/about" class="site-nav">About Us<span class="lbl nm_label1">New</span></a></li>
             <li><a href="/contact" class="site-nav">Contact Us</a></li>
            
