--- a/views/user/product.hbs
+++ b/views/user/product.hbs
@@ -297,9 +297,9 @@
                     			<div class="tabs-listing">
                         <ul class="product-tabs">
                             <li rel="tab1"><a class="tablink">Product Details</a></li>
-                            {{#if user}}
+                            {{!-- {{#if user}} --}}
                             <li rel="tab2"><a class="tablink">Product Reviews</a></li>
-                            {{/if}}
+                            {{!-- {{/if}} --}}
                             <li rel="tab4"><a class="tablink">Shipping &amp; Returns</a></li>
                         </ul>
                         <div class="tab-container">
@@ -329,14 +329,16 @@
                                         <div class="spr-header clearfix">
                                             <div class="spr-summary">
                                                 <span class="product-review"><a class="reviewLink"><i class="font-13 fa fa-star"></i><i class="font-13 fa fa-star"></i><i class="font-13 fa fa-star"></i><i class="font-13 fa fa-star-o"></i><i class="font-13 fa fa-star-o"></i> </a><span class="spr-summary-actions-togglereviews">Based on 6 reviews456</span></span>
+                                                {{#if isProduct}}
                                                 <span class="spr-summary-actions">
                                                     <a href="#" class="spr-summary-actions-newreview btn">Write a review</a>
                                                 </span>
+                                                {{/if}}
                                             </div>
                                         </div>
                                         <div class="spr-content">
                                             <div class="spr-form clearfix">
-                                                
+                                                {{#if isProduct}}
                                                  <form id="review-form" data-id="{{product._id}}">
             <h3>Write a review</h3>
             <div class="spr-form-contact">
@@ -369,6 +371,7 @@
                 <input type="submit" value="Submit Review">
             </div>
         </form>
+        {{/if}}
         <div class="review-container">
         <h3>Customer Reviews</h3>
         <div id="reviews-list"></div>
