--- a/views/user/order-success.hbs
+++ b/views/user/order-success.hbs
@@ -29,7 +29,7 @@
                             <div class="col-12 col-sm-12 col-md-12 col-lg-12 d-flex justify-content-between align-items-center">
                                 <div class="page-title"><h1>Order success</h1></div>
                                 <!--Breadcrumbs-->
-                                <div class="breadcrumbs"><a href="index.html" title="Back to the home page">Home</a><span class="main-title"><i class="icon anm anm-angle-right-l"></i>Order success</span></div>
+                                <div class="breadcrumbs"><a href="/home" title="Back to the home page">Home</a><span class="main-title"><i class="icon anm anm-angle-right-l"></i>Order success</span></div>
                                 <!--End Breadcrumbs-->
                             </div>
                         </div>
@@ -69,10 +69,10 @@
                                             <tbody>
                                                 {{#each items}}
                                                 <tr>
-                                                    <td class="text-start"><a href="product-layout1.html" class="thumb"><img data-src="/{{this.product.productImage.[1]}}" src="/{{this.product.productImage.[2]}}" alt="product" title="product" width="120" height="170"></a></td>
+                                                    <td class="text-start"><a href="/product?id={{this.product.id}}" class="thumb"><img data-src="/{{this.product.productImage.[1]}}" src="/{{this.product.productImage.[2]}}" alt="product" title="product" width="120" height="170"></a></td>
                                                     <td class="text-start proName">
                                                         <div class="list-view-item-title">
-                                                            <a href="product-layout1.html">{{this.product.name}}</a>
+                                                            <a href="/product?id={{this.product.id}}">{{this.product.name}}</a>
                                                         </div>
                                                         <div class="cart-meta-text">
                                                             Brand: {{this.product.brand}}<br>Size: Small
