--- a/views/user/partials/header.hbs
+++ b/views/user/partials/header.hbs
@@ -99,12 +99,12 @@
                            
 							{{!-- <li><a href="/product-checkout" class="site-nav">Checkout</a></li> --}}
                             <li><a href="/about" class="site-nav">About Us <span class="lbl nm_label1">New</span> </a></li>
-                            <li><a href="/contact" class="site-nav">Contact Us</a></li>
+                            {{!-- <li><a href="/contact" class="site-nav">Contact Us</a></li> --}}
                            
-                            <li><a href="/coming-soon" class="site-nav">Coming soon <span class="lbl nm_label1">New</span> </a></li>
+                            {{!-- <li><a href="/coming-soon" class="site-nav">Coming soon <span class="lbl nm_label1">New</span> </a></li> --}}
                           </ul>
                         </li>
-                        <li class="lvl1 parent dropdown"><a href="/blog">Blog <i class="anm anm-angle-down-l"></i></a>
+                        {{!-- <li class="lvl1 parent dropdown"><a href="/blog">Blog <i class="anm anm-angle-down-l"></i></a> --}}
                          
                         </li>
                         {{!-- <li class="lvl1"><a href="#"><b>Buy Now!</b></a></li> --}}
@@ -230,9 +230,9 @@
            
 			{{!-- <li><a href="/checkout" class="site-nav">Checkout</a></li> --}}
            <li><a href="/about" class="site-nav">About Us<span class="lbl nm_label1">New</span></a></li>
-            <li><a href="/contact" class="site-nav">Contact Us</a></li>
+            {{!-- <li><a href="/contact" class="site-nav">Contact Us</a></li> --}}
            
-            <li><a href="/coming-soon" class="site-nav">Coming soon<span class="lbl nm_label1">New</span></a></li>
+            {{!-- <li><a href="/coming-soon" class="site-nav">Coming soon<span class="lbl nm_label1">New</span></a></li> --}}
           </ul>
         </li>
         	<li class="lvl1 parent megamenu"><a href="/blog">Blog <i class="anm anm-plus-l"></i></a>
