--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -500,7 +500,7 @@
                             <p class="text-danger">{{errorMessage}}</p>
                             <input type="submit" class="btn mb-3" value="Create">
                             <!-- Sign in with Google button -->
-                            <a href="/auth/google" class="btn mb-3">Sign in with Google</a>
+                            {{!-- <a href="/auth/google" class="btn mb-3">Sign in with Google</a> --}}
                         </div>
                     </div>
                 </form>
