--- a/views/user/shop.hbs
+++ b/views/user/shop.hbs
@@ -405,7 +405,7 @@ body {
             <li class="level1 mr-2 mb-2"><a href="/shop">All</a></li>
             <li class="level1 mr-2 mb-2"><a href="/shop?category=Trending">Trending</a></li>
             <li class="level1 mr-2 mb-2"><a href="/shop?category=Men's Shoes">Mens</a></li>
-            <li class="level1 mr-2 mb-2"><a href="/shop?category=Womens">Womens</a></li>
+            <li class="level1 mr-2 mb-2"><a href="/shop?category=Women's Shoes">Womens</a></li>
             <li class="level1 mr-2 mb-2"><a href="/shop?category=Charecter Edition">Character Editions</a></li>
             <li class="level1 mr-2 mb-2"><a href="/shop?category=New Arrival">New Arrival</a></li>
         </ul>
